<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/constrait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <include android:id="@+id/toolbar"
                 layout="@layout/toolbar"/>

        <Button
                android:id="@+id/button_cycle"
                android:text="@string/button_to_cycle"
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

        <Button
                android:id="@+id/button_click"
                android:text="@string/button_to_click"
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/button_cycle"/>

        <Button
                android:id="@+id/button_android_extensions"
                android:text="@string/button_to_android_extensions"
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/button_click"/>

        <Button
                android:id="@+id/button_picasso"
                android:text="@string/button_to_picasso"
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/button_android_extensions"/>

        <Button
                android:id="@+id/button_list_view"
                android:text="@string/button_to_list_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/button_picasso"/>

        <Button
                android:id="@+id/button_intents"
                android:text="@string/button_to_intents"
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/button_list_view"/>

        <Button
                android:id="@+id/button_permissions"
                android:text="@string/button_to_permissions"
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/button_intents"/>

        <Button
                android:id="@+id/button_shared_preferences"
                android:text="@string/button_to_shared_preferences"
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/button_permissions"/>

        <Button
                android:id="@+id/button_extensions_functions"
                android:text="@string/button_to_extension_functions"
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/button_shared_preferences"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>