<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ClickEventsActivity">

    <Button
            android:text="@string/button_click_xml"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/buttonClickXML"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="xmlClick"/>
    <Button
            android:text="@string/button_click_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/buttonClickInLine"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonClickXML"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/button_multi_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/buttonClickMulti1"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonClickInLine"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/button_multi_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/buttonClickMulti2"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonClickMulti1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/button_multi_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/buttonClickMulti3"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonClickMulti2"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

</android.support.constraint.ConstraintLayout>