<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SharedPreferencesActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/preferences_name_hint"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/editTextName" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/preferneces_age_hint"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/editTextAge" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/preferneces_button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/buttonSave" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextAge" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="22sp"
            android:id="@+id/textViewSharedPreferences" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonSave" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
</android.support.constraint.ConstraintLayout>